# microgpt-evolve-rust

./: .gitignore  100GEN_RESULTS.md  Cargo.toml  GPU_EVOLUTION_SETUP.md  GPU_MAX_STRESS.md  GPU_OPTIMIZATION_ANALYSIS.md  GPU_SELECTION_GUIDE.md  GPU_TESTING_SUMMARY.md  LARGE_EVOLUTION_SETUP.md  README.md  SSH_SETUP_GUIDE.md  analyze_hydra_experiment.py  analyze_results.py  evolution_config.json  evolution_config_100.json  evolution_config_1000.json  genome-best.json  genome.json  genome_fitness_best.json  run_evolution_100.sh  run_evolution_1000.sh  test_small_run.ps1
genomes/: README.md  registry.json
genomes/loss/: 2026-02-27_loss_8d10f5b61c.json  2026-02-27_loss_g01_12580e36f9.json  2026-02-27_loss_g01_49d58ba068.json  2026-02-27_loss_g01_777774e23d.json  2026-02-27_loss_g01_88c1307b38.json  2026-02-27_loss_g01_8db3f8d8a3.json  2026-02-27_loss_g01_bb513be7de.json  2026-02-27_loss_g01_c4be8ec423.json  2026-02-27_loss_g01_f8b81aa13e.json  2026-02-27_loss_g02_148f355eec.json  2026-02-27_loss_g02_3179999841.json  2026-02-27_loss_g02_3f42310a27.json  2026-02-27_loss_g02_3f64bd93ba.json  2026-02-27_loss_g02_7c063e3fcd.json  2026-02-27_loss_g02_9389bccda5.json  2026-02-27_loss_g02_c2a7340da8.json  2026-02-27_loss_g02_fff0f873f6.json  2026-02-27_loss_g03_0467b3b944.json  2026-02-27_loss_g03_056b47fe1a.json  2026-02-27_loss_g03_0ea74ff9ac.json  2026-02-27_loss_g03_373bed5e0d.json  2026-02-27_loss_g03_3859230c8e.json  2026-02-27_loss_g03_3c4f13825e.json  2026-02-27_loss_g03_6d64531bf0.json  2026-02-27_loss_g03_8660b20ac1.json  (+56 more)
research/: architecture_design.md  deep_learning_experiment.md  expanded_parameters_experiment.md  expanded_parameters_experiment_robust.md
scripts/: genome_import_loss_log.sh  genome_submit.sh  genome_use.sh
src/: evolution_config.rs  genome.rs  gpu_accel.rs  gpu_test.rs  lib.rs  lib_cpu.rs
(+6 files in other folders)
