[package]
name = "microgpt_rust"
version = "0.1.0"
edition = "2021"
default-run = "microgpt_rust"

[dependencies]
rand = "0.8"
rayon = "1.10"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
